
        [float]
        ===== Features

        [float]
        ===== Bug fixes

        [float]
        ===== Chores

2. When making a release, change the "==== Unreleased" section header to:

        [[release-notes-x.x.x]]
        ==== x.x.x - YYYY/MM/DD
////

[[release-notes-3.x]]
=== Node.js Agent version 3.x


==== Unreleased

[float]
===== Breaking changes

[float]
===== Features

[float]
===== Bug fixes

* Fix an edge case in instrumentation of `http.request()` and `https.request()`
  with node v19.9.0 and recently nightly builds of node v20.
  ({issues}3261[#3261])

[float]
===== Chores

* Restrict Next.js instrumentation to `<13.3.0` for now, because of a known
  issue with instrumentating the `next@13.3.0` dev server. ({issues}3263[#3263])


[[release-notes-3.44.1]]
==== 3.44.1 2023/04/06

[float]
===== Bug fixes

* Fix an issue where the APM agent receiving central config (from APM server)
  containing a value for `sanitized_field_names` would crash.
  ({issues}3247[#3247])


[[release-notes-3.44.0]]
==== 3.44.0 2023/04/03

[float]
===== Features

* Update the <<opentelemetry-bridge>> supported version of `@opentelemetry/api`
  to version 1.4.x. ({pull}3239[#3239])

[float]
===== Bug fixes

* Ensure `metadata.service.agent.activation_method` is only sent for APM
  server version 8.7.1 or later. APM server 8.7.0 included a bug where
  receiving `activation_method` is harmful. ({issues}3230[#3230])


[[release-notes-3.43.0]]
==== 3.43.0 2023/03/02

[float]
===== Features

* Support mongodb v5. ({issues}3138[#3138])

* Propagate trace-context in message attributes for SQS (SendMessage and
  SendMessageBatch) and SNS (Publish), provided the maximum 10 message
  attributes limit is not passed. SQS message reception (ReceiveMessage) and
  SQS- and SNS-triggered Lambda functions already produce _span links_ for
  incoming messages with trace-context. This allows linking between
  producer and consumer in the Kibana APM app. ({pull}3044[#3044])
