@@ -246,13 +246,18 @@ GenericSpan.prototype._serializeOTel = function (payload) {
     payload.otel = {
       span_kind: this._otelKind
     }
-    if (this._otelAttributes) {
-      // Though the spec allows it ("MAY"), we are opting *not* to report OTel
-      // span attributes as labels for older (<7.16) versions of APM server.
-      // This is to avoid the added complexity of guarding allowed attribute
-      // value types to those supported by the APM server intake API.
-      payload.otel.attributes = this._otelAttributes
+  }
+
+  if (this._otelAttributes) {
+    // Though the spec allows it ("MAY"), we are opting *not* to report OTel
+    // span attributes as labels for older (<7.16) versions of APM server.
+    // This is to avoid the added complexity of guarding allowed attribute
+    // value types to those supported by the APM server intake API.
+    if (!payload.otel) {
+      payload.otel = {}
     }
+
+    payload.otel.attributes = this._otelAttributes
   }
 }
 
